# cutflow-ai

./: .ai-git-rules.md  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
 `src/test/: test-setup.ts`
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  server.rs
src/components/: AspectRatioSelector.tsx  AssetBrowser.tsx  AudioRecorder.tsx  CaptionEditor.tsx  ChatPanel.tsx  ExportDialog.tsx  Header.tsx  LanguageSelector.tsx  MCPConfigPanel.tsx  MotionGraphicsEditor.tsx  MotionGraphicsOverlay.tsx  Sidebar.tsx  SoundLibrary.tsx  SubtitleOverlay.tsx  TemplateBrowser.tsx  Timeline.tsx  TranscriptView.tsx  TransitionPicker.tsx  VideoPlayer.tsx  WelcomeScreen.tsx
src/context/: CaptionContext.tsx  MotionGraphicsContext.tsx  TimelineContext.test.tsx  TimelineContext.tsx
src/hooks/: usePlaybackPipeline.ts  useWhisper.ts
src/lib/: filler-words.ts  motion-parser.ts
src/lib/export/: edl.ts  fcpxml.ts
src/templates/: motion-graphics.ts
src/workers/: whisper.worker.ts
