[workspace]
resolver = "2"

[package]
name = "cutflow-ai"
version = "0.1.0"
description = "CutFlow AI — local-first AI video editor"
authors = ["CutFlow AI Team"]
license = "MIT"
repository = ""
default-run = "cutflow-ai"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cutflow_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
thiserror = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
